--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
 
   <center>
-    <a href="{{site.url}}{{site.baseurl}}">
+    <a href="https://johnle.org/blog/">
       <div class="site-title" style="font-family: Stick-no-bills; color: red;">
         {{site.title}}
       </div>
@@ -23,7 +23,7 @@
       {% for sitePage in site.pages %}
       {% if sitePage.title %}
 
-      <span class="exclamationMark">/</span><a class="page-link" href="{{sitePage.url | prepend: site.baseurl }}">{{sitePage.title}}</a>
+      <span class="exclamationMark">/</span><a class="page-link" href="https://johnle.org/blog/">{{sitePage.title}}</a>
       {% endif %}
       {% endfor %}
     </div>
